# shbbot

./: README.md  main.py  minimum.py  pyproject.toml
cogs/: dice.py  helloworld.py
cogs/minecraft/: gt_voltage.py  tfc_supporter.py
cogs/util/: ping.py
util/: glovalvar.py
